--- a/04MIAR/Representación Gráfica Conjuntos Borrosos.ipynb
+++ b/04MIAR/Representación Gráfica Conjuntos Borrosos.ipynb
@@ -446,7 +446,7 @@
     "        ax.fill_between(universe, 0, activation, where=[(val >= activation) for val in fuzzy_set], facecolor='darkgray', interpolate=True)\n",
     "    ax.set_ylim([0, 1.05])\n",
     "    ax.legend()\n",
-    "\n",
+    "Test\n",
     "# Gráficos para las reglas\n",
     "fig, axs = plt.subplots(nrows=2, ncols=3, figsize=(15, 5))\n",
     "\n",
